[package]
name = "audiorep"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
crossterm = "0.28"
libc = "0.2"
ratatui = "0.29"
rustfft = "6.4"
thiserror = "2.0"
tracing = "0.1"
tracing-subscriber = "0.3"

[target.'cfg(target_os = "macos")'.dependencies]
cpal = "0.17"
objc2-core-audio = { version = "0.3", default-features = false, features = ["std", "AudioHardware", "AudioHardwareDeprecated", "objc2", "objc2-foundation"] }
objc2-core-audio-types = "0.3"
